--- a/html/crear_usuario.html
+++ b/html/crear_usuario.html
@@ -27,7 +27,7 @@
             <button type="submit">Registrar</button>
         </form>
 
-        <p>¿Ya tienes cuenta? <a href="index.html">Inicia sesión</a></p>
+        <p>¿Ya tienes cuenta? <a href="../index.html">Inicia sesión</a></p>
     </div>
 
     <script src="/js/crear_usuario.js"></script>
